# glances-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
docs/: MULTI-SERVER-SETUP.md  PRD.md
glances_mcp/: __init__.py  main.py  server.py
glances_mcp/config/: config.json  models.py  settings.py  validation.py
glances_mcp/prompts/: __init__.py  analysis.py  reporting.py  troubleshooting.py
glances_mcp/resources/: __init__.py  configuration.py  historical.py  knowledge.py
glances_mcp/services/: alert_engine.py  baseline_manager.py  glances_client.py  health_calculator.py
glances_mcp/tools/: advanced_analytics.py  alert_management.py  basic_monitoring.py  capacity_planning.py
glances_mcp/utils/: helpers.py  logging.py  metrics.py
