[project]
name = "glances-mcp-server"
version = "1.0.0"
description = "MCP Server for Glances infrastructure monitoring"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.1",
    "aiohttp>=3.12.15",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.7.0",
    "asyncio-mqtt>=0.16.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0", 
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "ruff>=0.8.0",
    "mypy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glances_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "ISC", "PIE", "T20", "PYI", "Q"]
ignore = ["E501"]  # Line too long (handled by black)
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.isort]
known-first-party = ["glances_mcp"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
show_error_codes = true
pretty = true
namespace_packages = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["asyncio_mqtt.*", "structlog.*"]
ignore_missing_imports = true